# zadanie

./: .env.example  .gitignore  Dockerfile  LICENSE  MakeFile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
app/domain/: __init__.py  base.py  expense.py  user.py
app/repositories/storage/models/: __init__.py  base.py  category.py  expense.py  monthly_budget.py  payment_method.py  user.py
app/repositories/storage/postgres/: db_helper.py  repositories.py
app/transport/api/v1/handler/: budgets.py  categories.py  expenses.py  payment_methods.py  users.py
app/transport/api/v1/schemas/: budget.py  category.py  expense.py  payment_method.py  user.py
app/transport/telegram/: __init__.py  bot.py  client.py  parser.py
app/usecase/: expense_analytics.py  service.py
docs/screenshots/: SCREENSHOT_INSTRUCTIONS.md
migrations/: env.py
migrations/versions/: 20260531_0001_init_expense_tracker.py  20260601_0002_expand_finance_entities.py
tests/: test_api_crud.py  test_expense_analytics.py  test_service_crud.py  test_telegram_bot_handlers.py  test_telegram_parser.py
